--- a/bin/application/JpGui.fxml
+++ b/bin/application/JpGui.fxml
@@ -2,14 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,15 +16,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="aPane" prefHeight="800.0" prefWidth="775.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.JpGuiController">
+<AnchorPane fx:id="aPane" prefHeight="700.0" prefWidth="775.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.JpGuiController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox fx:id="hbTitle" alignment="CENTER_LEFT" spacing="4.0">
                <children>
                   <Label fx:id="lblTitle" text="JPackage Project GUI">
                      <font>
-                        <Font name="System Bold" size="36.0" />
+                        <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
                   <VBox alignment="BOTTOM_LEFT">
@@ -39,23 +37,20 @@
                      </children>
                   </VBox>
                   <Region HBox.hgrow="ALWAYS" />
-                  <VBox>
+                  <HBox alignment="BOTTOM_LEFT">
                      <children>
-                        <Label fx:id="lblOs" text="OS:">
+                        <Label text="OS:">
                            <font>
                               <Font name="SansSerif Bold" size="15.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cbPlatform" onAction="#doPlatform" prefWidth="115.0" style="-fx-font-size: 16px; -fx-font-weight: bold;">
-                           <tooltip>
-                              <Tooltip text="Select the Platform to edit.">
-                              	<font>
-                              		<Font size="16.0" />
-                           		</font>
-                              </Tooltip>
-                           </tooltip></ComboBox>
+                        <Label fx:id="lblPlatform" text="Label" textFill="BLUE">
+                           <font>
+                              <Font name="SansSerif Bold" size="20.0" />
+                           </font>
+                        </Label>
                      </children>
-                  </VBox>
+                  </HBox>
                </children>
                <padding>
                   <Insets bottom="4.0" left="6.0" right="6.0" top="4.0" />
@@ -79,8 +74,6 @@
                               <SeparatorMenuItem mnemonicParsing="false" />
                               <MenuItem fx:id="mFileDeleteProject" mnemonicParsing="false" onAction="#doFileDeleteProject" text="Delete Project" />
                               <SeparatorMenuItem mnemonicParsing="false" />
-                              <MenuItem fx:id="mFileSwitch" mnemonicParsing="false" onAction="#doFileSwitch" text="Switch Workspace" />
-                              <SeparatorMenuItem mnemonicParsing="false" />
                               <MenuItem fx:id="mFileQuit" mnemonicParsing="false" onAction="#doFileQuit" text="Quit" />
                         </items>
                       </Menu>
@@ -93,8 +86,8 @@
                         </Menu>
                       <Menu fx:id="menuAction" mnemonicParsing="false" text="Action">
                         <items>
-                          <MenuItem fx:id="mActionRun" mnemonicParsing="false" onAction="#doActionRun" text="Run" />
-                              <MenuItem fx:id="mActionScript" mnemonicParsing="false" onAction="#doActionScript" text="Script" />
+                          <MenuItem fx:id="mActionRun" mnemonicParsing="false" onAction="#doActionRun" text="Run Script" />
+                              <MenuItem fx:id="mActionScript" mnemonicParsing="false" onAction="#doActionScript" text="Build Scripts" />
                         </items>
                       </Menu>
                         <Menu mnemonicParsing="false" text="Settings">
@@ -111,24 +104,12 @@
                       </Menu>
                     </menus>
                   </MenuBar>
-                  <Button fx:id="btnWorkspace" mnemonicParsing="false" onAction="#doFileSwitch">
-                     <font>
-                        <Font name="SansSerif Regular" size="16.0" />
-                     </font>
-                     <tooltip>
-                        <Tooltip fx:id="ttWorkspace" text="Switch Workspace.">
-                           <font>
-                              <Font size="16.0" />
-                           </font>
-                        </Tooltip>
-                     </tooltip>
-                  </Button>
                </children>
                <padding>
                   <Insets right="4.0" />
                </padding>
             </HBox>
-            <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="ALL_TABS" VBox.vgrow="ALWAYS" />
+            <TabPane fx:id="tabPane" tabClosingPolicy="ALL_TABS" VBox.vgrow="ALWAYS" />
             <HBox alignment="CENTER_LEFT" spacing="4.0">
                <children>
                   <Label text="Status:">
