--- a/src/application/PrjNewWizard.fxml
+++ b/src/application/PrjNewWizard.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="aPane" prefHeight="775.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PrjNewWizardController">
+<AnchorPane fx:id="aPane" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PrjNewWizardController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -51,7 +51,7 @@
                         <Font name="SansSerif Regular" size="16.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="taProjectDesc" prefHeight="100.0" prefWidth="400.0" HBox.hgrow="ALWAYS">
+                  <TextArea fx:id="taProjectDesc" prefHeight="50.0" prefWidth="400.0" HBox.hgrow="ALWAYS">
                      <font>
                         <Font name="SansSerif Regular" size="16.0" />
                      </font>
@@ -70,7 +70,7 @@
                   </Label>
                </children>
             </HBox>
-            <VBox fx:id="vbox" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS" />
+            <VBox fx:id="vbox" VBox.vgrow="ALWAYS" />
             <HBox alignment="CENTER_LEFT" spacing="4.0">
                <children>
                   <Button fx:id="btnSave" mnemonicParsing="false" onAction="#doBtnSave" prefWidth="125.0" text="Save">
